BusOne/src/objects/MC_Cycle_Plan_Target_vod__c.object
<CustomObject>
    <description>Defines a Cycle Plan Target and the overall interaction values assigned to the Target.</description>
    <fields>
        <fullName>Channel_Attainment_vod__c</fullName>
        <description>Calculated percentage of the sum of channel activity interactions earned over the sum of channel activity interactions goal.</description>
        <label>Channel Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Actual_vod__c</fullName>
        <description>Sum of all actual channel activity interactions.</description>
        <label>Channel Interactions Actual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Earned_vod__c</fullName>
        <description>If Channel Interactions Actual is greater than Channel Interactions Max this value will be Channel Interactions Max, otherwise Channel Interactions Actual.</description>
        <label>Channel Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Goal_vod__c</fullName>
        <description>Target&apos;s total interaction goal for all channel activities.</description>
        <label>Channel Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Max_vod__c</fullName>
        <description>Maximum number of interactions a user can earn for a Target from all channel activities. This provides the ability to cap the interactions Earned for the Target as a whole (eg. cannot exceed 100% attainment).</description>
        <label>Channel Interactions Max</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Remaining_vod__c</fullName>
        <description>Channel interactions Goal minus Channel interactions Earned</description>
        <label>Channel Interactions Remaining</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Status_vod__c</fullName>
        <description>Comparing the Target&apos;s Channel Attainment and the % Cycle Completed.</description>
        <label>Channel Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship where the goals are set for the Target.</description>
        <label>Child Account</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Targets</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Targets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_vod__c</fullName>
        <description>Cycle Plan that the Target is related to</description>
        <label>Cycle Plan</label>
        <referenceTo>MC_Cycle_Plan_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Plan Targets</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Targets_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Furigana_vod__c</fullName>
        <description>Field for Japanese users. Furigana for the target.</description>
        <formula>IF(NOT(ISBLANK(Location_vod__c)), Location_vod__r.Furigana_vod__c &amp; &quot; &quot; &amp; Target_vod__r.Furigana_vod__c, Target_vod__r.Furigana_vod__c)</formula>
        <label>Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_Edited_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by triggers. If true, then one of the goals for this target has been edited.</description>
        <label>Goals Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Calculated_vod__c</fullName>
        <description>Date and time the Cycle Plan was last calculated.</description>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location where the goals are set for the Target</description>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cycle Plan Targets (Location)</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Targets_Location_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Name_vod__c</fullName>
        <description>Display name for the parent child relationship</description>
        <formula>If (NOT(ISBLANK(Location_vod__c)), Location_vod__r.Name + &quot; &quot; + Target_vod__r.LastName + &quot; &quot; + Target_vod__r.FirstName,&quot;&quot;)</formula>
        <label>Parent Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Attainment_vod__c</fullName>
        <description>Calculated percentage of the sum of product activity interactions earned over the sum of product activity interactions goal.</description>
        <label>Product Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Product interactions Earned for all product activities</description>
        <label>Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Goal_vod__c</fullName>
        <description>Target&apos;s total interaction goal for all product activities.</description>
        <label>Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Status_vod__c</fullName>
        <description>Comparing the Target&apos;s Product Attainment and the % Cycle Completed.</description>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Indicates the status of the Cycle Plan Target record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active_vod</fullName>
                </value>
                <value>
                    <fullName>Merged_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Target Account that is related to the Cycle Plan</description>
        <label>Target</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cycle Plan Targets</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Targets_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Attainment_vod__c</fullName>
        <description>Calculated percentage of the sum of team channel activity interactions earned over the sum of team channel activity interactions goal.</description>
        <label>Team Channel Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Actual_vod__c</fullName>
        <description>Sum of the team&apos;s actual channel activity interactions.</description>
        <label>Team Channel Interactions Actual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Earned_vod__c</fullName>
        <description>If Team Channel Interactions Actual is greater than Team Channel Interactions Max this value will be Team Channel Interactions Max, otherwise Team Channel Interactions Actual.</description>
        <label>Team Channel Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Goal_vod__c</fullName>
        <description>Target&apos;s total team interaction goal for all channel activities.</description>
        <label>Team Channel Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Max_vod__c</fullName>
        <description>Maximum number of interactions a team can earn for a Target from all channel activities. This provides the ability to cap the interactions Earned for the Target as a whole (eg. cannot exceed 100% attainment).</description>
        <label>Team Channel Interactions Max</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Remaining_vod__c</fullName>
        <description>Team Channel Interactions Goal minus Team Channel Interactions Earned</description>
        <label>Team Channel Interactions Remaining</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Status_vod__c</fullName>
        <description>Comparing the Target&apos;s Team Channel Attainment and the % Cycle Completed.</description>
        <label>Team Channel Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Product_Attainment_vod__c</fullName>
        <description>Calculated percentage of the sum of team product activity interactions earned over the sum of team product activity interactions goal.</description>
        <label>Team Product Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Team Product Interactions Earned for all product activities</description>
        <label>Team Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Goal_vod__c</fullName>
        <description>Target&apos;s total team interaction goal for all product activities.</description>
        <label>Team Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Status_vod__c</fullName>
        <description>Comparing the Target&apos;s Team Product Attainment and the % Cycle Completed.</description>
        <label>Team Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>System set to prevent duplicate Targets on a Cycle Plan. Value will be Cycle Plan.Id + __ + Account.Id + __ + Status_vod__c</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MC Cycle Plan Target</label>
    <nameField>
        <displayFormat>CPT-{0000}</displayFormat>
        <label>Cycle Plan Target</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Cycle Plan Targets</pluralLabel>
    <recordTypes>
        <fullName>Cycle_Plan_Target_vod</fullName>
        <active>true</active>
        <description>Cycle Plan Target</description>
        <label>Cycle_Plan_Target_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Goal_Validations_vod</fullName>
        <active>true</active>
        <description>Channel_Interactions_Goal_vod cannot be less than 0</description>
        <errorConditionFormula>Channel_Interactions_Goal_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Channel_Interactions_Goal_vod__c</errorDisplayField>
        <errorMessage>Channel Interactions Goal cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LocationIsPersonAccount_vod</fullName>
        <active>true</active>
        <description>Location_vod must be a business account</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Location_vod__c)), Location_vod__r.IsPersonAccount = TRUE)</errorConditionFormula>
        <errorDisplayField>Location_vod__c</errorDisplayField>
        <errorMessage>Cannot populate Location_vod with a person account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_TargetIsBusinessAcct_vod</fullName>
        <active>true</active>
        <description>Target_vod must be a person account if Location_vod is populated</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Location_vod__c)),
Target_vod__r.IsPersonAccount = FALSE)</errorConditionFormula>
        <errorDisplayField>Location_vod__c</errorDisplayField>
        <errorMessage>Cannot populate Location_vod if Target_vod is a business account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_Validations_vod</fullName>
        <active>true</active>
        <description>Channel_Interactions_Max_vod cannot be less than 0 or less than Channel_Interactions_Goal_vod</description>
        <errorConditionFormula>OR(
Channel_Interactions_Max_vod__c &lt; 0,
Channel_Interactions_Max_vod__c &lt; Channel_Interactions_Goal_vod__c
)</errorConditionFormula>
        <errorDisplayField>Channel_Interactions_Max_vod__c</errorDisplayField>
        <errorMessage>Channel Interactions Max cannot be less than 0 or less than Channel Interactions Goal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Goal_Validations_vod</fullName>
        <active>true</active>
        <description>Team_Channel_Interactions_Goal_vod cannot be less than 0</description>
        <errorConditionFormula>Team_Channel_Interactions_Goal_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Team_Channel_Interactions_Goal_vod__c</errorDisplayField>
        <errorMessage>Team Channel Interactions Goal cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Max_Validations_vod</fullName>
        <active>true</active>
        <description>Team_Channel_Interactions_Max_vod cannot be less than 0 or less than Team_Channel_Interactions_Goal_vod</description>
        <errorConditionFormula>OR(
Team_Channel_Interactions_Max_vod__c &lt; 0,
Team_Channel_Interactions_Max_vod__c &lt; Team_Channel_Interactions_Goal_vod__c
)</errorConditionFormula>
        <errorDisplayField>Team_Channel_Interactions_Max_vod__c</errorDisplayField>
        <errorMessage>Team Channel Interactions Max cannot be less than 0 or less than Team Channel Interactions Goal.</errorMessage>
    </validationRules>
</CustomObject>